# EarlyReflections

./: CMakeLists.txt
cmake/: FindQwt.cmake
sources/: app.cpp  app.h  datadialog.ui  ergen.cpp  ergen.h  erproc.cpp  erproc.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
